src/main/default/objects/Case/fields/DialogRoutingKey__c.field-meta.xml
<CustomField>
    <fullName>DialogRoutingKey__c</fullName>
    <label>DialogRoutingKey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>