src/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speedbit Alta Fitness</fullName>
            </value>
            <value>
                <fullName>Speedbit Aria</fullName>
            </value>
            <value>
                <fullName>Speedbit Blaze Smart Fitness Watch</fullName>
            </value>
            <value>
                <fullName>Speedbit Charge 2 Fitness</fullName>
            </value>
            <value>
                <fullName>Speedbit Charge 2 Lavender</fullName>
            </value>
            <value>
                <fullName>Speedbit Charge HR</fullName>
            </value>
            <value>
                <fullName>Speedbit Flex 2 Bangle</fullName>
            </value>
            <value>
                <fullName>Speedbit Flex 2 Lariat Necklace</fullName>
            </value>
            <value>
                <fullName>Speedbit Surge</fullName>
            </value>
            <value>
                <fullName>Speedbit Zip Fitness Tracker</fullName>
            </value>
            <value>
                <fullName>Speed Flex 2 Fitness Tracker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>