src/main/default/objects/Case/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Fitness Wristband</fullName>
            </value>
            <value>
                <fullName>Heart Rate + Fitness Wristband</fullName>
            </value>
            <value>
                <fullName>Smart Fitness Watch</fullName>
            </value>
            <value>
                <fullName>Wi-Fi Smart Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>